# SecretSanta

./: .gitattributes  .gitignore  CMakeLists.txt  Secret Santa.lnk  colors.h  main.c  my_functions_counterproductively_placed_in_one_isolated_file.c  readme.md  testconfig.ss
DataStore/: CMakeLists.txt  DataStore.c  DataStore.h  getline.c
Interaction/: GeneralInteraction.c  GeneralInteraction.h
Interaction/Admin/: AdminInteraction.c  AdminInteraction.h  CMakeLists.txt
Interaction/User/: CMakeLists.txt  UserInteraction.c  UserInteraction.h
PasswordManager/: CMakeLists.txt  PasswordManager.c  PasswordManager.h
UI/Admin/: AdminUI.c  AdminUI.h  CMakeLists.txt
UI/User/: CMakeLists.txt  UserUI.c  UserUI.h
UserInterface/: CMakeLists.txt  UserInterface.c  UserInterface.h
WebServer/: .gitignore  CMakeLists.txt  WebServer.c  WebServer.h
modules/admin_interaction/: admin_interaction.c  admin_interaction.h
modules/file_operations/: file_operations.c  file_operations.h
modules/general_operations/: general_operations.c  general_operations.h
modules/user_interaction/: user_interaction.c  user_interaction.h
